# creatorly

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  Justfile  Makefile  README.md  Todo.md  install.sh  release-plz.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml  rust.yml
assets/common/docs/architecture/: creatorly-arch_doc_name.md  creatorly.yml  test.md
assets/example_project/: creatorly.yml
assets/example_project/doc/: architecture  test.md
assets/example_project/src/: index.html
assets/example_project/{{ project_name }}/: index.html
docs/: architecture.md
docs/architecture/: architecture.adoc  architecture.md  config.adoc
docs/architecture/content/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
docs/usage/: config.adoc  tipps_for_template.adoc  usage.adoc  usage.asciidoc
docs/usage/content/: 01_installation.adoc  02_cli.adoc  03_tipps.adoc
examples/: creatorly.yml
src/: main.rs
src/application/: Cargo.toml  mod.rs
src/application/common/: interfaces.rs
src/application/configuration/: configuration.rs  interfaces.rs  mod.rs
src/application/create/: interfaces.rs  mod.rs  service.rs  template_engine.rs
src/application/src/: lib.rs
src/application/src/common/: interfaces.rs
src/application/src/create/: file_list.rs  interfaces.rs  service.rs  template_engine.rs  template_specification.rs
src/application/src/generate/: file_list.rs  interfaces.rs  mod.rs  service.rs  template_engine.rs  template_specification.rs
src/cli/: Cargo.toml
src/cli/src/: create.rs  generate.rs  main.rs
src/cmd/cli/: Cargo.toml
src/cmd/cli/src/: main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/cli/: interface.rs
src/common/src/core/: interfaces.rs
src/common/src/infrastructure/: file_system.rs
src/domain/: author.rs  file_tree.rs  folder_tree.rs  mod.rs  provider.rs  repo.rs  template_specification.rs
src/generator/: Cargo.toml
src/generator/src/cli/: generate.rs
src/generator/src/core/: interfaces.rs  mod.rs  service.rs  template_engine.rs
src/generator/src/infrastructure/: mod.rs
src/generator/src/infrastructure/prompt/: cli_prompt.rs  mod.rs
src/generator/src/infrastructure/template_renderer/: liquid_template_renderer.rs  mod.rs
src/infrastructure/: Cargo.toml  cli_prompt.rs  file_system.rs  liquid_template.rs  mod.rs  yaml_configuration_loader.rs  yaml_templatespecification.rs
src/infrastructure/folder_loader/: local_file_loader.rs  mod.rs
src/infrastructure/resources/test/: test_template_spec.yml
src/infrastructure/src/: file_system.rs  lib.rs  logger.rs
src/infrastructure/src/configuration_loader/: yaml_configuration_loader.rs  yaml_templatespecification.rs
src/infrastructure/src/folder_loader/: git_files_loader.rs  local_file_loader.rs
src/infrastructure/src/prompt/: cli_prompt.rs
src/infrastructure/src/template_renderer/: liquid_template.rs  liquid_template_renderer.rs  mod.rs
src/infrastructure/test_data/: test_template_spec.yml
src/modules/check/: Cargo.toml
src/modules/check/src/: cli.rs  lib.rs  logic.rs  types.rs
src/modules/common/: Cargo.toml
src/modules/common/src/cli/: cli_user_interaction_interface.rs  command.rs  functions.rs  interface.rs  mod.rs
src/modules/common/src/core/: errors.rs  file.rs  interfaces.rs  mod.rs  user_interaction_interface.rs
src/modules/common/src/infrastructure/: file_system.rs  logger.rs  mod.rs
src/modules/create/: Cargo.toml
src/modules/create/src/: cli.rs  lib.rs  service.rs
src/modules/generate/: Cargo.toml
src/modules/generate/src/cli/: generate.rs
src/modules/generate/src/core/: service.rs
src/modules/generator/: Cargo.toml
src/modules/generator/src/: lib.rs
src/modules/generator/src/cli/: generate.rs
src/modules/generator/src/core/: interfaces.rs  service.rs  template_engine.rs
src/modules/template/: Cargo.toml
src/modules/template/src/: cli.rs  lib.rs
src/modules/template/src/check/: cli.rs  logic.rs  types.rs
src/modules/template/src/create/: cli.rs  service.rs
src/modules/template/src/generate/: cli.rs  mod.rs  service.rs
src/modules/template/src/generate/cli/: generate.rs
src/modules/template/src/generate/core/: service.rs
src/modules/template/src/templatespecification/core/: file_list.rs  interfaces.rs  mod.rs  service.rs  template_configuration.rs  template_engine.rs  template_specification.rs  validate_template.rs
src/modules/template/src/templatespecification/infrastructure/: liquid_template_renderer.rs  mod.rs  regex_templaterenderer.rs  stringreplace_templaterenderer.rs
src/modules/template/src/templatespecification/infrastructure/configuration_loader/: mod.rs  yaml_configuration_loader.rs  yaml_templatespecification.rs
src/modules/template/src/templatespecification/infrastructure/folder_loader/: git_files_loader.rs  local_file_loader.rs  mod.rs
src/modules/templatespecification/: Cargo.toml
src/modules/templatespecification/src/: lib.rs
src/modules/templatespecification/src/core/: interfaces.rs  mod.rs  service.rs  template_configuration.rs  template_engine.rs  template_specification.rs
src/modules/templatespecification/src/infrastructure/: cli_prompt.rs  liquid_template_renderer.rs  mod.rs
src/modules/templatespecification/src/infrastructure/configuration_loader/: yaml_configuration_loader.rs  yaml_templatespecification.rs
src/modules/templatespecification/src/infrastructure/folder_loader/: git_files_loader.rs  local_file_loader.rs
src/templatespecification/: Cargo.toml
src/templatespecification/src/core/: file_list.rs  interfaces.rs  service.rs  template_configuration.rs  template_specification.rs
src/templatespecification/src/infrastructure/: mod.rs
test-azure/: Changelog.md
(+7 files in other folders)
