[workspace]
resolver = "2"
members = [
    "src/cmd/cli",
    "src/modules/*",
]

[workspace.package]
authors = ["Burak Kizilkaya <burak.kizilkaya@outlook.com>"]
version = "1.4.0"

[workspace.dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "fs", "io-util", "macros", "process"] }
async-trait = "0.1.68"
tempfile = "3.0.4"
clap = { version = "4.1.8", features = ["derive"] }
mockall = "0.12.1"
tempdir = "0.3.7"

[profile.release]
opt-level = "z"
strip = true
lto = true
