[package]
name = "creatorly"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
log = { workspace = true }
