[package]
name = "creatorly"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = { path = "../generator", features = ["cli"] }
common = { path = "../common", features = ["cli"] }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
