[package]
name = "creatorly"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = { path = "../../modules/generator", features = ["cli"] }
create = { path = "../../modules/create", features = ["cli"] }
common = { path = "../../modules/common", features = ["cli"] }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
