[package]
name = "creatorly"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generate = { path = "../../modules/generate", features = ["cli"] }
create = { path = "../../modules/create", features = ["cli"] }
common = { path = "../../modules/common", features = ["cli"] }
check = { path = "../../modules/check", features = ["cli"] }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
