[package]
name = "creatorly"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../modules/common", features = ["cli"] }
template = { path = "../../modules/template", features = ["cli"] }
clap = { workspace = true }
tokio = { workspace = true }
