[package]
name = "common"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true}
clap = { workspace = true }
simplelog = "0.12"
time = "0.3"
dialoguer = "0.11.0"

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }

[features]
cli = []
