[package]
name = "create"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["cli"] }
templatespecification = { path = "../templatespecification" }
tokio = { workspace = true }
async-trait = { workspace = true}
clap = { workspace = true }
regex = "1.10.2"

[dev-dependencies]
mockall = { workspace = true }
tempdir = { workspace = true }

[features]
cli = []
