[package]
name = "generate"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["cli"] }
templatespecification = { path = "../templatespecification" }
log = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true}
clap = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
cli = []
